[gd_scene load_steps=13 format=3 uid="uid://bux5keo3fe3ar"]

[ext_resource type="Script" uid="uid://bmganatsi74u5" path="res://entities/player/player.gd" id="1_sglur"]
[ext_resource type="Script" uid="uid://ijd0jcqf56d2" path="res://entities/player/controls.gd" id="2_bls4j"]
[ext_resource type="Script" uid="uid://ciqeg5bm5wtew" path="res://entities/player/camera_3d.gd" id="3_bls4j"]
[ext_resource type="PackedScene" uid="uid://bys8s0ais0da1" path="res://entities/throne/throne.tscn" id="3_fkugw"]
[ext_resource type="Script" uid="uid://b25xuhebt2tpu" path="res://entities/player/lasers.gd" id="5_fkugw"]

[sub_resource type="SphereShape3D" id="SphereShape3D_e8heu"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_bls4j"]
transparency = 1
albedo_color = Color(0, 10, 10, 0.3)

[sub_resource type="CylinderMesh" id="CylinderMesh_fkugw"]
material = SubResource("StandardMaterial3D_bls4j")
top_radius = 0.05
bottom_radius = 0.05
height = 1.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fkugw"]

[sub_resource type="SphereMesh" id="SphereMesh_8fjmc"]
material = SubResource("StandardMaterial3D_fkugw")
radius = 0.05
height = 0.1

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8fjmc"]
transparency = 1
albedo_color = Color(0, 10, 10, 0.3)

[sub_resource type="CylinderMesh" id="CylinderMesh_qiwj3"]
material = SubResource("StandardMaterial3D_8fjmc")
top_radius = 0.05
bottom_radius = 0.05
height = 1.0

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_sglur")

[node name="Controls" type="Node" parent="."]
script = ExtResource("2_bls4j")
stick_rotation_speed = Vector2(1, 1)

[node name="BoosterTimer" type="Timer" parent="Controls"]
wait_time = 2.0
one_shot = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_e8heu")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2)
script = ExtResource("3_bls4j")

[node name="RayCast3D" type="RayCast3D" parent="Camera3D"]
target_position = Vector3(0, 0, -1000)
collide_with_areas = true
collide_with_bodies = false

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]

[node name="Throne" parent="." instance=ExtResource("3_fkugw")]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0, 0, 0)

[node name="Lasers" type="Node3D" parent="."]
script = ExtResource("5_fkugw")

[node name="RightLaser" type="Node3D" parent="Lasers"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.8, 0, 0)

[node name="LaserWrapper" type="Node3D" parent="Lasers/RightLaser"]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Lasers/RightLaser/LaserWrapper"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, -0.5)
mesh = SubResource("CylinderMesh_fkugw")
skeleton = NodePath("../..")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Lasers/RightLaser"]
mesh = SubResource("SphereMesh_8fjmc")

[node name="LeftLaser" type="Node3D" parent="Lasers"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.8, 0, 0)

[node name="LaserWrapper" type="Node3D" parent="Lasers/LeftLaser"]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Lasers/LeftLaser/LaserWrapper"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, -0.5)
mesh = SubResource("CylinderMesh_qiwj3")
skeleton = NodePath("../..")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Lasers/LeftLaser"]
mesh = SubResource("SphereMesh_8fjmc")

[node name="Timer" type="Timer" parent="Lasers"]
wait_time = 0.1

[node name="Node3D" type="Node3D" parent="."]

[connection signal="timeout" from="Lasers/Timer" to="Lasers" method="_on_timer_timeout"]
